fixed layout for main index page which was messed up due to one pic wrong size.

--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -176,6 +176,58 @@ fieldset[disabled] .btn-xl.active {
     background-color: #fff;
 }
 
+.btn-xl-selected {
+    padding: 20px 40px;
+    border-color: orangered;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+    background-color: orangered;
+}
+
+.btn-xl-selected:hover,
+.btn-xl-selected:focus,
+.btn-xl-selected:active,
+.btn-xl-selected.active,
+.open .dropdown-toggle.btn-xl-selected {
+    border-color: orangered;
+    color: #fff;
+    background-color: orangered;
+}
+
+.btn-xl-selected:active,
+.btn-xl-selected.active,
+.open .dropdown-toggle.btn-xl-selected {
+    background-image: none;
+}
+
+.btn-xl-selected.disabled,
+.btn-xl-selected[disabled],
+fieldset[disabled] .btn-xl-selected,
+.btn-xl-selected.disabled:hover,
+.btn-xl-selected[disabled]:hover,
+fieldset[disabled] .btn-xl-selected:hover,
+.btn-xl-selected.disabled:focus,
+.btn-xl-selected[disabled]:focus,
+fieldset[disabled] .btn-xl-selected:focus,
+.btn-xl-selected.disabled:active,
+.btn-xl-selected[disabled]:active,
+fieldset[disabled] .btn-xl-selected:active,
+.btn-xl-selected.disabled.active,
+.btn-xl-selected[disabled].active,
+fieldset[disabled] .btn-xl-selected.active {
+    border-color: orangered;
+    background-color: orangered;
+}
+
+.btn-xl-selected .badge {
+    color: orangered;
+    background-color: #fff;
+}
+
 .navbar-default {
     border-color: transparent;
     background-color: #222;
@@ -366,7 +418,7 @@ section h3.section-subheading {
     display: block;
     position: relative;
     margin: 0 auto;
-    max-width: 400px;
+    max-width: 300px;
 }
 
 .menu-item .menu-link .menu-hover {
